--- a/styles.css
+++ b/styles.css
@@ -29,15 +29,35 @@ main.container {
     height: 100%;
     width: 100%;
     background-color: hsl(185, 75%, 39%);
-    background-image: url(./images/bg-pattern-top.svg), url(./images/bg-pattern-bottom.svg);
-    background-position-x: -30rem, 70rem;
-    background-position-y: -70rem, 30rem;
-    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
     flex: 1;
+    z-index: -1;
 }
+
+.container:before, .container:after {
+    position: absolute;
+    content: '';
+    width: 100vw;
+    height: 100vh;
+    background-size: auto;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+  }
+  
+  .container:before {
+    top: 0;
+    left: 0;
+    background: url("../images/bg-pattern-top.svg") no-repeat bottom right;
+  }
+  
+  .container:after {
+    top: 100%;
+    left: 100%;
+    background: url("../images/bg-pattern-bottom.svg") no-repeat;
+  }
+
 
 .card {
     height: 37.4rem;
